vlib/v/checker/tests/const_array_unknown_type_err.vv
type AA = [20]BB
